--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="login"><a href="login.html">登录</a></div>
+				<!-- <div class="login"><a href="login.html">登录</a></div> -->
 			</div>
 			<!-- 下拉菜单 -->
 			<div class="slide-nav">
@@ -92,7 +92,7 @@
 			</ul>
 		</div>
 		<div class="footer">
-			<p> (©) 2019 山东易搜集团 官方网站 <a href="https://www.0537ys.com">https://www.0537ys.com</a></p>
+			<p> (©) 2020 山东易搜集团 官方网站 <a href="https://www.0537ys.com">https://www.0537ys.com</a></p>
 			<p>网站图片来源于网络,如有侵权请联系删除</p>
 		</div>
 		<div data-am-smooth-scroll class="slidetop am-btn am-btn-success">
