--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 						<li>
 							<p>颜色</p>
 						</li>
+						<li>
+							<p>风格</p>
+						</li>
 					</ul>
 				</div>
 				<!-- <div class="login"><a href="login.html">登录</a></div> -->
@@ -60,6 +63,7 @@
 			<div class="slide-nav">
 				<ul id="industry"></ul>
 				<ul id="color"></ul>
+				<ul id="style"></ul>
 			</div>
 		</div>
 		<!-- 侧边栏内容 -->
@@ -79,6 +83,12 @@
 					    	</div>
 					    	<div id="do-not-say-2" class="am-panel-collapse am-collapse"></div>
 					  	</div>
+						<div class="am-panel am-panel-default">
+							<div class="am-panel-hd">
+						  		<h4 class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-2'}">颜色</h4>
+							</div>
+							<div id="do-not-say-3" class="am-panel-collapse am-collapse"></div>
+						</div>
 					</div>
 				</nav>
 			</div>
