--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					  	</div>
 						<div class="am-panel am-panel-default">
 							<div class="am-panel-hd">
-						  		<h4 class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-2'}">颜色</h4>
+						  		<h4 class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-3'}">风格</h4>
 							</div>
 							<div id="do-not-say-3" class="am-panel-collapse am-collapse"></div>
 						</div>
